kustomize/overlays/mongodb/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  annotations:
    kube-score/ignore: pod-networkpolicy,container-resources
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      serverpod: mongodb
  template:
    metadata:
      labels:
        serverpod: mongodb
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mongodb
          image: mongo:5.0.22-focal
          imagePullPolicy: Always
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 96Mi
          ports:
            - containerPort: 27017
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 27017
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
          volumeMounts:
            - name: mongo-db
              mountPath: /data/db
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: mongo-db
          emptyDir: {}
        - name: tmp
          emptyDir: {}
