kustomize/overlays/mongodb/mongoku-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoku
  annotations:
    kube-score/ignore: pod-networkpolicy,container-security-context
spec:
  replicas: 1
  selector:
    matchLabels:
      serverpod: mongoku
  template:
    metadata:
      labels:
        app: mongodb
        serverpod: mongoku
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mongodb
          image: huggingface/mongoku:1.3.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false # denies setuid/setguid
            readOnlyRootFilesystem: true
          resources:
            limits:
              memory: 128Mi
              cpu: "0.5"
            requests:
              memory: 96Mi
              cpu: "0.1"
          readinessProbe:
            httpGet:
              port: 3100
          ports:
            - containerPort: 3100
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /tmp
              name: temp-dir
      volumes:
        - name: temp-dir
          emptyDir: {}
