kustomize/overlays/mongodb/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    serverpod: mongodb
  type: ClusterIP
