kustomize/overlays/mongodb/mongoku-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongoku
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    serverpod: mongoku
  type: ClusterIP
