kustomize/overlays/mongodb/mongoku-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongoku
                port:
                  name: http
